--- a/mysite/personal/templates/personal/includes/htmlsnippets.html
+++ b/mysite/personal/templates/personal/includes/htmlsnippets.html
@@ -1,7 +1,7 @@
 {% block content %}
 
 <h2> What an app is this! </h2>
-<h3> THIS IS ANOTHER LINE OF THE WEB PAGE! </h3>
+<h3> THIS IS ANOTHER LINE OF THE WEB PAGE! WHAY WA: ASDH JDGKASL </h3>
 <p> This is so amazing. That I cannot fathom sometimes tha amoount of information I am getting from these things.</p>
 
 
