--- a/mysite/personal/templates/personal/home.html
+++ b/mysite/personal/templates/personal/home.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <p> Hey this is now a legit app! </p>
-<h3> I'm gonna somehow fill this page and learn a lot! </h3>
+<h3> I'm gonna somehow fill this page and learn a lot! eTea really!! </h3>
 
 {% include "personal/includes/htmlsnippets.html" %}
 
